created initial looping through dom logic

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </tr>
     </table>
 
-    <!-- <script src="script.js"></script> -->
+     <script src="script.js"></script>
 
   </body>
 
