--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
 
-    <table class="grid">
+    <!-- <table id="grid">
       <col width="100">
       <col width="100">
       <col width="100">
@@ -66,7 +66,7 @@
         <td class="square">  </td>
         <td class="square">  </td>
       </tr>
-    </table>
+    </!--> 
 
      <script src="script.js"></script>
 
