--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css">
 
+    <script src="script.js"></script>
   </head>
 
 
   <body>
 
-     <script src="script.js"></script>
+
+
+     <script src="game.js"></script>
 
   </body>
 
