--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="script.js"></script>
   </head>
@@ -11,6 +12,7 @@
 
   <body>
 
+    <button>Dark mode</button>
 
 
      <script src="game.js"></script>
