added placeholder buttons for future functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
 
     <button>Dark mode</button>
+    <button>Reset game</button>
+    <button>Solve game</button>
 
 
      <script src="game.js"></script>
