reordered index javascript script imports, game board is now able to be referenced by other files

--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <script src="script.js"></script>
   </head>
 
 
   <body>
 
-    <button>Dark mode</button>
-    <button>Reset game</button>
-    <button>Solve game</button>
+    <button onclick="DarkMode()">Dark mode</button>
+    <button onclick="NewGame()">New game</button>
+    <button onclick="SolveGame()">Solve game</button>
 
 
-     <script src="game.js"></script>
+      <!-- <script src="game.js"></script> -->
+      <script src="game.js"></script>
+      <script src="script.js"></script>
+      <script src="board.js"></script>
 
   </body>
 
