changed casing to be camel case to be more javascript-esque

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <body>
 
-    <button onclick="DarkMode()">Dark mode</button>
-    <button onclick="NewGame()">New game</button>
-    <button onclick="SolveGame()">Solve game</button>
+    <button onclick="darkMode()">Dark mode</button>
+    <button onclick="newGame()">New game</button>
+    <button onclick="solveGame()">Solve game</button>
 
 
       <!-- <script src="game.js"></script> -->
