--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button onclick="newGame()">New game</button>
     <button onclick="solveGame()">Solve game</button>
 
+    <div id="game"></div>
+
 
       <!-- <script src="game.js"></script> -->
       <script src="game.js"></script>
